fixes for Issue1

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,10 +1,13 @@
 CC=g++
-CFLAGS=-O3 -Wall -std=c++17
+CFLAGS= -Wall -std=c++17
 
 all: assembler
 
 assembler:main.cpp Instructions.cpp Parse.cpp
-	$(CC) $(CFLAGS) -o assembler Parse.cpp Instructions.cpp main.cpp
+	$(CC) $(CFLAGS) -O3 -o assembler Parse.cpp Instructions.cpp main.cpp
+
+debug:main.cpp Instructions.cpp Parse.cpp
+	$(CC) $(CFLAGS) -g -DDEBUG -o assembler main.cpp Instructions.cpp Parse.cpp
 
 .PHOMY:clean
 clean:
