--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,7 +1,10 @@
 all:simulator
 
-simulator:FPU.hpp FPU.cpp Memory.hpp Memory.cpp Simulator.hpp Simulator.cpp main.cpp
-	g++ -g -Wall -o simulator *.hpp *.cpp
+simulator:util.hpp util.cpp FPU.hpp FPU.cpp Memory.hpp Memory.cpp Simulator.hpp Simulator.cpp main.cpp
+	g++ -O3 -Wall -o simulator *.hpp *.cpp
+
+debug:util.hpp util.cpp FPU.hpp FPU.cpp Memory.hpp Memory.cpp Simulator.hpp Simulator.cpp main.cpp
+	g++ -g -DDEBUG -Wall -o simulator *.hpp *.cpp
 
 .PHONY:clean
 clean:
