--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,4 +1,4 @@
-all:simulator
+all:debug
 
 simulator:util.hpp util.cpp FPU.hpp FPU.cpp Memory.hpp Memory.cpp Simulator.hpp Simulator.cpp main.cpp
 	g++ -O3 -Wall -o simulator *.hpp *.cpp
