--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,11 +1,9 @@
 all:simulator
+CC=g++
+CFLAGS= -O3 -Wall -o simulator 
 
-simulator:util.hpp util.cpp FPU.hpp FPU.cpp Memory.hpp Memory.cpp Simulator.hpp Simulator.cpp main.cpp
-	g++ -O3 -Wall -o simulator *.cpp
+simulator:*.cpp *.hpp
+	$(CC) $(CFLAGS) *.cpp
 
-debug:util.hpp util.cpp FPU.hpp FPU.cpp Memory.hpp Memory.cpp Simulator.hpp Simulator.cpp main.cpp
-	g++ -g -DDEBUG -Wall -o simulator *.cpp
-
-.PHONY:clean
 clean:
-	rm -rf simulator
+	rm -f simulator
