--- a/sim/Makefile
+++ b/sim/Makefile
@@ -2,8 +2,10 @@ all:simulator
 CC=g++
 CFLAGS= -O3 -Wall -o simulator 
 
-simulator:*.cpp *.hpp
-	$(CC) $(CFLAGS) *.cpp
+simulator:*.cpp *.hpp ../asm/Instructions.cpp ../asm/Parse.cpp
+	$(CC) $(CFLAGS) ../asm/Instructions.cpp ../asm/Parse.cpp *.cpp
+
+
 
 clean:
 	rm -f simulator
