--- a/sim/Makefile
+++ b/sim/Makefile
@@ -11,5 +11,8 @@ prof:*.cpp *.hpp ../asm/Instructions.cpp ../asm/Parse.cpp
 gdb:*.cpp *.hpp ../asm/Instructions.cpp ../asm/Parse.cpp
 	$(CC) $(CFLAGS) -g ../asm/Instructions.cpp ../asm/Parse.cpp *.cpp
 	
+debug:*.cpp *.hpp ../asm/Instructions.cpp ../asm/Parse.cpp
+	$(CC) $(CFLAGS) -DDEBUG ../asm/Instructions.cpp ../asm/Parse.cpp *.cpp
+
 clean:
 	rm -f simulator
