--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,9 +1,11 @@
 all:simulator
 CC=g++
-CFLAGS= -O3 -Wall -std=c++17 -o simulator 
+CFLAGS= -O3 -Wall -std=c++17 -o simulator -I ../include/asmjit/src -DASMJIT_STATIC
+ASMJIT_SRC_DIR=../include/asmjit/src/asmjit
+ASMJIT_SRC=$(ASMJIT_SRC_DIR)/x86/*.cpp $(ASMJIT_SRC_DIR)/core/*.cpp $(ASMJIT_SRC_DIR)/*.h
 
 simulator:*.cpp *.hpp ../asm/Instructions.cpp ../asm/Parse.cpp
-	$(CC) $(CFLAGS) ../asm/Instructions.cpp ../asm/Parse.cpp CPU.cpp Memory.cpp Simulator.cpp fpu.cpp main.cpp util.cpp
+	$(CC) $(CFLAGS) ../asm/Instructions.cpp ../asm/Parse.cpp CPU.cpp Memory.cpp Simulator.cpp fpu.cpp main.cpp util.cpp $(ASMJIT_SRC)
 
 prof:*.cpp *.hpp ../asm/Instructions.cpp ../asm/Parse.cpp
 	$(CC) $(CFLAGS) -pg ../asm/Instructions.cpp ../asm/Parse.cpp CPU.cpp Memory.cpp Simulator.cpp fpu.cpp main.cpp util.cpp
