--- a/sim/CMakeLists.txt
+++ b/sim/CMakeLists.txt
@@ -14,7 +14,9 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -Wall")
 
 add_library(simlib ${CMAKE_CURRENT_LIST_DIR}/CPU.cpp ${CMAKE_CURRENT_LIST_DIR}/Compiler.cpp 
     ${CMAKE_CURRENT_LIST_DIR}/Memory.cpp ${CMAKE_CURRENT_LIST_DIR}/Simulator.cpp 
-    ${CMAKE_CURRENT_LIST_DIR}/fpu.cpp ${CMAKE_CURRENT_LIST_DIR}/util.cpp)
+    ${CMAKE_CURRENT_LIST_DIR}/fpu.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../lib/util.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../lib/DisAssembler.cpp)
 
 target_link_libraries(simlib asmlib asmjit)
 
