added register type check

--- a/asm/CMakeLists.txt
+++ b/asm/CMakeLists.txt
@@ -5,13 +5,14 @@ project(OreOre-V-Asmlib CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 set(CMAKE_CXX_FLAGS "-std=c++17 -g -Wall")
+include(${CMAKE_CURRENT_LIST_DIR}/../lib/CMakeLists.txt)
 
 #add_definitions(-DDEBUG)
 
 add_library(asmlib ${CMAKE_CURRENT_LIST_DIR}/Instructions.cpp
 ${CMAKE_CURRENT_LIST_DIR}/Parse.cpp
-${CMAKE_CURRENT_LIST_DIR}/Assembler.cpp
-${CMAKE_CURRENT_LIST_DIR}/../lib/util.cpp)
+${CMAKE_CURRENT_LIST_DIR}/Assembler.cpp)
+target_link_libraries(asmlib utillib)
 
 add_executable(assembler ${CMAKE_CURRENT_LIST_DIR}/main.cpp)
 target_link_libraries(assembler asmlib)
