--- a/sim/CMakeLists.txt
+++ b/sim/CMakeLists.txt
@@ -14,11 +14,9 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -Wall")
 
 add_library(simlib ${CMAKE_CURRENT_LIST_DIR}/CPU.cpp ${CMAKE_CURRENT_LIST_DIR}/Compiler.cpp 
     ${CMAKE_CURRENT_LIST_DIR}/Memory.cpp ${CMAKE_CURRENT_LIST_DIR}/Simulator.cpp 
-    ${CMAKE_CURRENT_LIST_DIR}/fpu.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/../lib/util.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/../lib/DisAssembler.cpp)
+    ${CMAKE_CURRENT_LIST_DIR}/fpu.cpp)
 
-target_link_libraries(simlib asmlib asmjit)
+target_link_libraries(simlib asmlib asmjit utillib)
 
 add_executable(cli-simulator ${CMAKE_CURRENT_LIST_DIR}/main.cpp)
 target_link_libraries(cli-simulator simlib)
