--- a/sim/CMakeLists.txt
+++ b/sim/CMakeLists.txt
@@ -12,6 +12,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -Wall")
 
+if(WIN32)
+    add_definitions(-DWINDOWS)
+endif(WIN32)
+
 add_library(simlib ${CMAKE_CURRENT_LIST_DIR}/CPU.cpp ${CMAKE_CURRENT_LIST_DIR}/Compiler.cpp 
     ${CMAKE_CURRENT_LIST_DIR}/Memory.cpp ${CMAKE_CURRENT_LIST_DIR}/Simulator.cpp 
     ${CMAKE_CURRENT_LIST_DIR}/fpu.cpp)
