fixed some bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
 *.s
 *.out
+*.bin
 *.exe
-simulator
+*.res
+*.txt
+*.ppm
+gui-simulator
+cli-simulator
+simple-simulator
+disassembler
 assembler
+fverify
+proftest
 etc
+build/
+
+!CMakeLists.txt
