--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 project(OreOre-V-Simulator VERSION 0.1 LANGUAGES CXX)
 
-add_definitions(-DSTDFPU)
+#add_definitions(-DSTDFPU)
 
 include(${CMAKE_CURRENT_LIST_DIR}/OreOre-V-CMake-JIT/CMakeLists.txt)
