--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ project(OreOre-V-Utillib CXX)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -Wall")
 
-add_library(utillib ${CMAKE_CURRENT_LIST_DIR}/DisReader.cpp
+add_library(utillib ${CMAKE_CURRENT_LIST_DIR}/DisAssembler.cpp
 ${CMAKE_CURRENT_LIST_DIR}/util.cpp)
 
 add_executable(disassembler ${CMAKE_CURRENT_LIST_DIR}/main.cpp)
